# config/api_doc.yaml
@@ -339,3 +339,36 @@ nelmio_api_doc:
                     type: array
                     items:
                       type: string
+      /api/todo/{id}:
+        delete:
+          description: Delete todo
+          tags:
+            - Todo
+          produces:
+            - application/json
+          parameters:
+            - name: id
+              description: Id of todo to delete
+              required: true
+              in: path
+          responses:
+            '200':
+              description: Todo was deleted
+            '401':
+              description: Access denied
+              schema:
+                type: object
+                properties:
+                  errors:
+                    type: array
+                    items:
+                      type: string
+            '404':
+              description: Todo not found
+              schema:
+                type: object
+                properties:
+                  errors:
+                    type: array
+                    items:
+                      type: string
